added dashboard apis
